# solo-labs

./: MIRRORED.md  README.md  versions.env  vision-demo
agent-frameworks-kind/: README.md
agent-harness-openshell-kind/: README.md
agentgateway-bedrock-cost-profiling-kind/: README.md
agentgateway-claude-code-openai-kind/: README.md
agentgateway-inference-routing-kind/: README.md
agentgateway-versioned-routing-kind/: README.md
agentgw-code-mode-kind/: README.md
agentgw-multi-cluster-kind/: README-demo-notebook.md  README.md  agentgateway-demo  demo.ipynb
agentic-a2a-kind/: README.md
agentic-budgets-kind/: README.md
agentic-hitl-kind/: README.md  demo-hitl-kind.ipynb
agentic-structured-output-kind/: README.md
agentic-tool-privilege-kind/: README.md
agentregistry-agentcore-kind/: README.md  demo.ipynb
agentregistry-arctl-kind/: README.md
agentregistry-governance-kind/: README.md
ambient-multicluster-demo/: README.md  demo-1-istio-multicluster.ipynb  demo-2-istio-l4.ipynb  demo-2-l4-identity.ipynb  demo-3-istio-waypoint.ipynb  demo-3-waypoint.ipynb  demo-4-agentgateway.ipynb  demo-4-agentregistry.ipynb  demo.ipynb  setup.sh
istio-ambient-cert-identity-kind/: Makefile  README.md  demo.ipynb
istio-ambient-migration-kind/: README.md  demo.ipynb
istio-ambient-multiregion-eks/: README.md
istio-ambient-port-audit-kind/: Makefile  README.md
kagent-agentcore-solo-kb/agent/: Dockerfile  README.md  agent.yaml  arctl.yaml  pyproject.toml
kagent-agentcore-solo-kb/agent/solofieldassistant/: agent-card.json  agent.py  mcp_tools.py
(+963 files in other folders)
