[project]
name = "solofieldassistant"
version = "0.1"
description = "solofieldassistant agent"
readme = "README.md"
dependencies = [
  # google-adk 1.25.1 bundles LiteLLM directly; later versions split it into
  # the [extensions] extra which the kagent-adk:0.8.0-beta6 base image's
  # uv-managed venv can't pick up via `pip install`. Pin to match the
  # solo-io/agentregistry-dev-samples reference template.
  "google-adk==1.25.1",
  "anthropic[bedrock]>=0.40",
]
requires-python = ">=3.13"
